# MCP_Server_C-

./: .gitignore  CMakeLists.txt  README.md  book_icon_b64.txt  main_gui.cpp  main_gui.h  scratch_win_stats.cpp  snapshot_tests.cpp
.github/workflows/: build-installers.yml
gui/: CustomButton.cpp  CustomButton.h  LanguageManager.h  SlideBook.cpp  SlideBook.h  SnapshotConsolePanel.cpp  SnapshotConsolePanel.h  SnapshotGraphPanel.cpp  SnapshotGraphPanel.h  SnapshotModel.cpp  SnapshotModel.h  StateWarningDialog.cpp  StateWarningDialog.h  cluster_topology.cpp  cluster_topology.h  icons.h  initPanel.h  permissions_dialog.cpp  permissions_dialog.h  sys_stats.cpp  sys_stats.h  windows.cpp  windows.h
linux/: mcp-server-manager.desktop
mcp/: CommandParser.cpp  CommandParser.h  Snapshot.h  SnapshotManager.cpp  SnapshotManager.h  auto_discovery.cpp  auto_discovery.h  cluster_handler.cpp  cluster_handler.h  cluster_manager.cpp  cluster_manager.h  confirmation_manager.cpp  confirmation_manager.h  crypto_utils.cpp  crypto_utils.h  knowledge_layer.cpp  knowledge_layer.h  main.cpp  network_utils.cpp  network_utils.h  server.h  settings_manager.cpp  settings_manager.h  sse_handler.cpp  sse_handler.h  thread_pool.h  tools.cpp  tools.h  utils.cpp  utils.h
